client side tictactoe board now works correctly if user drags mouse fast across tictactoe board.

--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -12,19 +12,19 @@
         <div id="ttt-board-container">
             <div id="ttt-board">
                 <div class="ttt-row">
-                    <div id='block-0' class="ttt-block" onclick="tictactoeBoard(0)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-1' class="ttt-block" onclick="tictactoeBoard(1)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-2' class="ttt-block" onclick="tictactoeBoard(2)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
+                    <div id='block-0' class="ttt-block" onclick="tictactoeBoard(0)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-1' class="ttt-block" onclick="tictactoeBoard(1)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-2' class="ttt-block" onclick="tictactoeBoard(2)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
                 </div>
                 <div class="ttt-row">
-                    <div id='block-3' class="ttt-block" onclick="tictactoeBoard(3)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-4' class="ttt-block" onclick="tictactoeBoard(4)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-5' class="ttt-block" onclick="tictactoeBoard(5)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
+                    <div id='block-3' class="ttt-block" onclick="tictactoeBoard(3)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-4' class="ttt-block" onclick="tictactoeBoard(4)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-5' class="ttt-block" onclick="tictactoeBoard(5)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
                 </div>
                 <div class="ttt-row">
-                    <div id='block-6' class="ttt-block" onclick="tictactoeBoard(6)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-7' class="ttt-block" onclick="tictactoeBoard(7)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
-                    <div id='block-8' class="ttt-block" onclick="tictactoeBoard(8)" onmouseover="tictactoeSymbolOver(event)" onmouseout="tictactoeSymbolOut(event)"></div>
+                    <div id='block-6' class="ttt-block" onclick="tictactoeBoard(6)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-7' class="ttt-block" onclick="tictactoeBoard(7)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
+                    <div id='block-8' class="ttt-block" onclick="tictactoeBoard(8)" onmouseover="tictactoeSymbolOver(event)" onmouseleave="tictactoeSymbolOut(event)"></div>
                 </div>
             </div>
         </div>
@@ -147,11 +147,6 @@
 </div>
 <script>
     function tictactoeSymbolOver(event){
-        // event.target.innerHTML="j";
-        // console.log(event.target.className);
-        // console.log('----------------------');
-        // console.log(event.target.innerHTML);
-        // console.log(event.target);
         if(event.target.className=='ttt-block'){
             console.log('ttt-block');
             var {playerSymbol}=JSON.parse(localStorage.getItem('player-info'));
@@ -167,12 +162,12 @@
         }
         // <div class='tempSymbol x-symbol center w-100 h-100'><i class='fas fa-times'></i></div>
     }
-    function tictactoeSymbolOut(){
-        if(event.target.className=='temp-symbol x-symbol center w-100 h-100'){
-            event.target.remove();
+    function tictactoeSymbolOut(event){
+        if(event.target.children[0].className=='temp-symbol x-symbol center w-100 h-100'){
+            event.target.innerHTML='';
         }
-        else if(event.target.className=='temp-symbol o-symbol center w-100 h-100'){
-            event.target.remove();
+        else if(event.target.children[0].className=='temp-symbol o-symbol center w-100 h-100'){
+            event.target.innerHTML='';
         }
     }
     
