--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -128,6 +128,9 @@
                     </div>
             </div>
         </div>
+        <div id="waiting">
+
+        </div>
         <div id="searching-for-player-container">
             <div id="searching-for-player"></div>
         </div>
