--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -4,9 +4,16 @@
             1
         </div>
         <div id="player-1-username-container" class="center">
-            <div id="player-1-username">
+            <div>
+                <div id="player-1-username">
+                        
+                </div>
+                <div class="win-container center">
+                    <div id="player-1-win-1" class="player-1-wins win-mr win-size"></div>
+                    <div id="player-1-win-2" class="player-1-wins win-size" ></div>
+                </div>
             </div>
-        </div>    
+        </div>      
     </div>
     <div id="ttt-container">
         <div id="ttt-board-container">
@@ -39,8 +46,14 @@
                 1
             </div>
             <div id="player-1-username-container-mobile" class="center">
-                <div id="player-1-username-mobile">
+                <div>
+                    <div id="player-1-username-mobile">
                     
+                    </div>
+                    <div class="win-container center">
+                        <div id="player-1-win-1-mobile" class="player-1-wins win-mr win-mobile-size"></div>
+                        <div id="player-1-win-2-mobile" class="player-1-wins win-mobile-size"></div>
+                    </div>
                 </div>
             </div>  
         </div>
@@ -52,8 +65,14 @@
                 2
             </div>
             <div id="player-2-username-container-mobile" class="center">
-                <div id="player-2-username-mobile">
+                <div>
+                    <div id="player-2-username-mobile">
                     
+                    </div>
+                    <div class="win-container center">
+                        <div id="player-2-win-1-mobile" class="player-2-wins win-mr win-mobile-size"></div>
+                        <div id="player-2-win-2-mobile" class="player-2-wins win-mobile-size"></div>
+                    </div>
                 </div>
             </div>  
         </div>
@@ -63,8 +82,14 @@
             2
         </div>
         <div id="player-2-username-container" class="center">
-            <div id="player-2-username">
-                    
+            <div>
+                <div id="player-2-username">
+                        
+                </div>
+                <div class="win-container center">
+                    <div id="player-2-win-1" class="player-2-wins win-mr win-size"></div>
+                    <div id="player-2-win-2" class="player-2-wins win-size"></div>
+                </div>
             </div>
         </div>    
     </div>
