--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -25,8 +25,8 @@
     font-size: 72px;
     color:rgb(0, 0, 0);
 }
-#winner-player-container{
-    /* width:100vw; height: 100vh;
+#set-winner-container{
+    width:100vw; height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,24 @@
     position: absolute;
     top: 0px;
     font-size: 72px;
-    color:rgb(0, 0, 0); */
+    color:rgb(0, 0, 0);
+}
+.modal-dialog{
+    max-width: 600px!important;
+}
+#set-winner-content{
+    height:200px; width:100%;
+}
+#set-winner-title{
+    font-size: 42px;
+}
+#back-home{
+    border:none;
+    background-color: rgb(0, 81, 255);
+    padding:10px;
+    font-size:16px;
+    color:white;
+    border-radius: 5px;
 }
 #player-declined-rematch-container{
     width:100vw; height: 100vh;
@@ -258,6 +275,9 @@
         width: 100%; height: 55%;
         color:blue;
         font-size: 20px;
+    }
+    .modal-dialog{
+        /* max-width: 400px!important; */
     }
 }
 /* mobile phones */
